# er-online-summons

./: CMakeLists.txt  entry.cpp  entry.h
.github/workflows/: build.yaml
include/steam/: isteamhtmlsurface.h  isteaminventory.h  isteammatchmaking.h  isteamnetworkingsockets.h  isteamnetworkingutils.h  isteamugc.h  isteamuserstats.h  steamclientpublic.h  steamnetworkingtypes.h
src/: OnlineSummons.cpp  OnlineSummons.h  SessionManager.cpp  SessionManager.h  SteamInterfaceProvider.cpp  SteamInterfaceProvider.h  SummonBuddyManager.cpp  SummonBuddyManager.h  SummonNetworking.cpp  SummonNetworking.h  SummonNetworkingMessages.cpp
src/core/: CodePatch.cpp  CodePatch.h  JumpHook.cpp  JumpHook.h  Logging.cpp  Logging.h  Memory.cpp  Memory.h  SteamInterfaceProvider.cpp
src/game/: Offsets.h  SessionManager.cpp  SessionManager.h  SummonBuddyManager.cpp  SummonBuddyManager.h
src/game/codepatches/: BuddyCleanupConditionCodePatch.cpp  BuddyCleanupConditionCodePatch.h
src/game/hooks/: BuddyGoodsStateHook.cpp  BuddyGoodsStateHook.h  BuddySummonedHook.cpp  BuddySummonedHook.h
src/hooks/: BuddySummonedHook.cpp  BuddySummonedHook.h
src/networking/: SummonNetworking.cpp  SummonNetworking.h  SummonNetworkingMessages.cpp  SummonNetworkingMessages.h
src/statemachine/: SummonBuddyStateFactory.cpp  SummonBuddyStateFactory.h  SummonBuddyStateMachine.cpp  SummonBuddyStateMachine.h
src/statemachine/states/: NoSummonSummonBuddyState.cpp  NoSummonSummonBuddyState.h  SummonDespawnRequestedSummonBuddyState.cpp  SummonDespawnRequestedSummonBuddyState.h  SummonRequestedSummonBuddyState.cpp  SummonRequestedSummonBuddyState.h  SummonSpawnRequestedSummonBuddyState.cpp  SummonSpawnRequestedSummonBuddyState.h  SummonSpawnedSummonBuddyState.cpp  SummonSpawnedSummonBuddyState.h
